# SafeEval

./: README.md  pyproject.toml  requirements.txt
config/: attack_sets.yaml  benchmarks.yaml  models.yaml
dashboard/: app.py  data_loader.py
dashboard/charts/: timeseries.py
data/results/: run_27146531_20260409_150333.csv  run_27146531_20260409_150333.json  run_c0aa98fc_20260415_193450.csv  run_c0aa98fc_20260415_193450.json
safeeval/: __init__.py  pipeline.py
safeeval/attacks/: __init__.py  advbench.py  base.py  harmbench.py  jailbreak.py
safeeval/benchmarks/: __init__.py  base.py  gsm8k.py  mmlu.py  truthfulqa.py
safeeval/judge/: __init__.py  llm_judge.py  prompts.py
safeeval/metrics/: __init__.py  capability.py  safety.py
safeeval/models/: __init__.py  anthropic_model.py  base.py  openai_model.py
scripts/: run_eval.py
tests/: test_pipeline.py
